# libfobos-sdr-agile

./: CMakeLists.txt  README.md  libfobos_sdr.pc.in  versions.txt
.github/workflows/: ci.yml
eval/: fobos_sdr_devinfo_main.c  fobos_sdr_recorder_main.c  fobos_sdr_scanner_main.c
fobos/: fobos_sdr.c  fobos_sdr.h
wav/: wav_file.c  wav_file.h
